2014-11-02 Roman
- LibsDB.vcaBase.db: Main.objProps: default size decreased to 1.5 and moved to dynamic translation.
    Main.cntrPaspExt: Moved to dynamic translation.
- DAQ.BlockCalc: Priority block additive selection is added.


2014-10-30 Roman
- LibsDB.OscadaLibs.db: base.{anUnif,manInUnif}: "HystBnd" for default set to 1% into the template.
    FIX:base.digitBlock: fixed for simultaneously commands clean.
- LibsDB.vcaBase.db:
    Graphics group:
	Title moved to attribute "name", for particular export name set.
	Adapted to procedure dynamic translation.
	Zero precision processing changed to equal for Main.anShow.
    Main.{anShow,anShow1},mnEls.{El_Kran_Sh,Compressor}: Select by focus and prevent the focus for empty name is added.
    mnEls.El_Alarm: processing procedure created for full signal and alarms forming.
- FIX:UI.VCAEngine: Mime download expanded and fixed for projects.
- DAQ.BlockCalc: "calcRes" moved to mutex.
    Diagnostics messages added for no start to process in some cases the reason detect.
    Sort blocks procedure mostly rewrited for fix.


2014-10-22 Roman
- LibsDB.OscadaLibs.db: Template base.digAlarm expanded for fullfeatured alarms generation from digital signal.
- LibsDB.vcaBase.db: Main.ElCadr: scale and histogram reordered for alarms borders visible ensure.
    Main.TextLab: alarms notify expanded to blink to "gray" back and postblink after alarm gone.
    mnEls.El_Kran_Sh: moved to dynamic translation and blink by appropriate control's panel open.
- AGLKS.St.db: Wrong LogLev.experiment.КШ7 removed.


2014-10-21 Roman
- LibsDB.OscadaLibs.db: DevLib.UPS translated adapted for miss fields and translated.
- LibsDB.vcaBase.db: Main.TextLab moved to dynamic translation and expanded by alarms notify.
    Main.{anShow,ElViewGraph}, mnEls.Compressor some fixed and expanded for translation.
- UI.WebVision: Scroll for the included containers correct for different variants.
    Some code clean up.


2014-10-16 Roman